files/log/commandLogs/16-2-2021_34_message.txt
Message: !help rules

Error: SyntaxError: Identifier 'final' has already been declared
c:\Users\simyo\OneDrive\Desktop\Ein Ordner mit Irgendwas\Interstellar-Bot\commands\help.js:92
						let final = index
						    ^

SyntaxError: Identifier 'final' has already been declared
    at wrapSafe (internal/modules/cjs/loader.js:931:16)
    at Module._compile (internal/modules/cjs/loader.js:979:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1035:10)
    at Module.load (internal/modules/cjs/loader.js:879:32)
    at Function.Module._load (internal/modules/cjs/loader.js:724:14)
    at Module.require (internal/modules/cjs/loader.js:903:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at c:\Users\simyo\OneDrive\Desktop\Ein Ordner mit Irgendwas\Interstellar-Bot\eventhandler\message.js:47:63
    at FSReqCallback.oncomplete (fs.js:169:5)
    at FSReqCallback.callbackTrampoline (internal/async_hooks.js:126:14)